--- a/index.html.pug
+++ b/index.html.pug
@@ -16,5 +16,5 @@ html(lang="ja")
         h1 Header
       main
         .archive
-
-
+          each val in [1,2,3,4,5]
+            include lipsum.pug
